--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO -->
-    <meta name="description" content="Haris Ahmad – Certified Health & Safety Professional with NEBOSH IGC, IOSH, and OSHA 30-hour certifications.">
+    <meta name="description" content="Haris Ahmad - Certified Health & Safety Professional with NEBOSH IGC, IOSH, and OSHA 30-hour certifications.">
     <meta name="keywords" content="Health and Safety Officer, NEBOSH IGC, IOSH, OSHA, Safety Professional Pakistan">
     <meta name="author" content="Haris Ahmad">
+    <meta name="google-site-verification" content="tDVJrbX7P1RWuRi8yUGkSt-GXjwLHcZC1ku-OvrGr8M" />
 
     <!-- Open Graph (LinkedIn / WhatsApp Preview) -->
     <meta property="og:title" content="Haris Ahmad | Health & Safety Professional">
