--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                             <i class="fas fa-external-link-alt"></i>
                         </div>
                         <div class="flex items-center gap-3 mb-2">
-                            <h3 class="text-lg md:text-xl font-bold text-slate-900 group-hover:text-safety-700 transition-colors">Attendent NEBOSH Online Conference 2025</h3>
+                            <h3 class="text-lg md:text-xl font-bold text-slate-900 group-hover:text-safety-700 transition-colors">NEBOSH Online Conference 2025</h3>
                         </div>
                         <p class="text-sm font-mono text-slate-500 mb-2">UK • Nov 2025</p>
                         <p class="text-slate-600 text-sm line-clamp-2">Certificate of Attendance: Culture of Care, Health, Wellbeing and Resilience.</p>
