--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                 <!-- Contact Info -->
                 <div class="md:w-1/2 space-y-8">
                     <p class="text-lg text-slate-600 leading-relaxed">
-                        I'm currently looking for internships and open-source collaborations. If you have a question or just want to say hi, my inbox is always open!
+                       I am open to safety roles, site assignments, and professional collaborations.
                     </p>
                     
                     <div class="py-4">
@@ -553,19 +553,29 @@
                         </p>
                     </div>
 
+                    <!-- Animated Guidance Cartoon -->
+                    <div class="flex items-end gap-2 mb-2 ml-1 animate-bounce" style="animation-duration: 2s;">
+                        <span class="text-5xl filter drop-shadow-md transform -rotate-6">👷</span>
+                        <div class="bg-white px-4 py-2 rounded-2xl rounded-bl-none shadow-md border border-slate-100 mb-4 relative">
+                            <p class="text-xs font-bold text-slate-600">Connect with me! 👇</p>
+                            <!-- Speech Bubble Tail -->
+                            <div class="absolute bottom-0 left-0 -mb-2 border-t-[10px] border-t-white border-r-[10px] border-r-transparent"></div>
+                        </div>
+                    </div>
+
                     <div class="flex gap-4 pt-2">
-                        <!-- Email/Gmail -->
-                        <a href="mailto:harisdawar327@gmail.com" class="w-12 h-12 rounded-full bg-white border border-slate-200 flex items-center justify-center text-safety-600 text-xl hover:bg-safety-600 hover:text-white transition-all shadow-sm">
+                        <!-- Email/Gmail (Red) -->
+                        <a href="mailto:harisdawar327@gmail.com" class="w-12 h-12 rounded-full bg-white border border-slate-200 flex items-center justify-center text-red-500 text-xl hover:bg-red-500 hover:text-white transition-all shadow-sm">
                             <i class="fas fa-envelope"></i>
                         </a>
 
-                        <!-- Facebook -->
-                        <a href="https://www.facebook.com/share/1Fx7dRHvPP/" target="_blank" class="w-12 h-12 rounded-full bg-white border border-slate-200 flex items-center justify-center text-safety-600 text-xl hover:bg-safety-600 hover:text-white transition-all shadow-sm">
+                        <!-- Facebook (Blue) -->
+                        <a href="https://www.facebook.com/share/1Fx7dRHvPP/" target="_blank" class="w-12 h-12 rounded-full bg-white border border-slate-200 flex items-center justify-center text-blue-600 text-xl hover:bg-blue-600 hover:text-white transition-all shadow-sm">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         
-                        <!-- LinkedIn -->
-                        <a href="https://www.linkedin.com/in/haris-ahmad-2a9971361" target="_blank" class="w-12 h-12 rounded-full bg-white border border-slate-200 flex items-center justify-center text-safety-600 text-xl hover:bg-safety-600 hover:text-white transition-all shadow-sm">
+                        <!-- LinkedIn (Dark Blue) -->
+                        <a href="https://www.linkedin.com/in/haris-ahmad-2a9971361" target="_blank" class="w-12 h-12 rounded-full bg-white border border-slate-200 flex items-center justify-center text-blue-700 text-xl hover:bg-blue-700 hover:text-white transition-all shadow-sm">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </div>
